Exercicios/exercicio04-LogicParser/Gramatica.txt
[ --- LogicParser --- ]

v, ¬ e as constantes true e false
∨ ==> OR
¬ ==> Negação

Gramática

Prog -> StmtList
StmtList -> Stmt ; StmtList 
		  | Stmt ;
Stmt -> Exp1 Exp
Exp -> ∨ Exp1 Exp | ​Ɛ
Exp1  -> ¬Exp1 | true | false
